--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 streamlit = "^1.40.2"
+fpdf2 = "^2.8.2"
+pymongo = "^4.10.1"
+matplotlib = "^3.10.0"
+openpyxl = "^3.1.5"
+xlsxwriter = "^3.2.0"
 
 
 [build-system]
