--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pymongo = "^4.10.1"
 matplotlib = "^3.10.0"
 openpyxl = "^3.1.5"
 xlsxwriter = "^3.2.0"
+python-dotenv = "^1.0.1"
+plotly = "^5.24.1"
 
 
 [build-system]
