--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Milosz Lopatto <milosz.lopatto@gmail.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -15,7 +16,6 @@ openpyxl = "^3.1.5"
 xlsxwriter = "^3.2.0"
 python-dotenv = "^1.0.1"
 plotly = "^5.24.1"
-
 
 [build-system]
 requires = ["poetry-core"]
